--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-		<!--custom stylesheet-->
+
 		<link href="https://fonts.googleapis.com/css?family=Average|Courgette|Raleway|Yellowtail" rel="stylesheet" type
     ="text/css">
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script src="js/carousel.js"></script>
+
 		<script src="https://use.fontawesome.com/4689f9ac4c.js"></script>
+
+		<!--custom stylesheet-->
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/photo-grid.css" />
+
+		<script src="js/photo-grid.js"></script>
 
 	</head>
 
@@ -69,18 +74,6 @@
 		</div>
 
 		<section id="photos"></section>
-		<script type="text/JavaScript">
-			$(document).ready(function() {
-				function getRandomSize(min, max) {
-				  return Math.round(Math.random() * (max - min) + min);
-				}
-				  for (var i = 0; i < 57; i++) {
-				    var width = getRandomSize(200, 400);
-				    var height =  getRandomSize(200, 400);
-				    $('#photos').append('<img src="img/girls/facebook-album/' + (i + 1) + '.jpg" width=' + width + ' height=' + height + '>');
-				  }
-				});
-		</script>
 
 		<!-- FOOTER -->
 	  <footer class="footer">
