update volunteers, remove united way

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 
-		<link href="https://fonts.googleapis.com/css?family=Average|Courgette|Raleway|Yellowtail" rel="stylesheet" type
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type
     ="text/css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -62,7 +62,6 @@
 								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Club Info<span class="caret"></span></a>
 								  <ul class="dropdown-menu">
 										<li><a href="#">Abrahams Branch</a></li>
-										<li><a href="#">United Way</a></li>
 										<li><a href="#">Do Space and OPS</a></li>
 								  </ul>
 								</li>
