--- a/volunteers.html
+++ b/volunteers.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 		<!--custom stylesheet-->
-		<link href="https://fonts.googleapis.com/css?family=Average|Courgette|Raleway|Yellowtail" rel="stylesheet" type
+		<link href="https://fonts.googleapis.com/css?family=Raleway|Open+Sans+Condensed:300" rel="stylesheet" type
     ="text/css">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -48,7 +48,6 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Club Info<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="#">Abrahams Branch</a></li>
-                    <li><a href="#">United Way</a></li>
                     <li><a href="#">Do Space and OPS</a></li>
                   </ul>
                 </li>
@@ -61,41 +60,42 @@
 
 		<div class="container team">
 
-		  <div class="row" align="center">
+		  <div class="row">
         <h1>Instructors</h1>
 
 				<div class="col-sm-6">
 					<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 				  <h2>Eris Koleszar</h2>
-				  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-				  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+				  <p class="bio">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 				</div>
 
 				<div class="col-sm-6">
 				  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 				  <h2>Wendy Holley</h2>
-				  <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-				  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+				  <p class="bio">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 				</div>
 			</div>
 
-			<div class="row" align="center">
+			<div class="row">
         <h1>Teaching Assistants</h1>
   			<div class="col-sm-6 col-lg-3">
-  			  <img class="img-rounded" src="img/volunteers/carah.jpg" width="140" height="140">
-  			  <h2>Cara Heacock</h2>
-  			  <p>
+          <div class="text-center">
+    			  <img class="img-rounded" src="img/volunteers/carah.jpg" width="140" height="140">
+    			  <h2>Cara Heacock</h2>
+          </div>
+  			  <p class="bio">
             Cara is a web developer, designer, and illustrator from Omaha, Nebraska. She has been drawing since she can remember and coding (terrible) websites since she was twelve, but decided to pursue a career in graphic design when she went to college. After receiving a Bachelor of Fine Arts from the University of Nebraska-Lincoln in 2011, she joined the Omaha Code School inaugural class in early 2014 to add more web development to her skill set.
 
             Cara is currently a developer at Big Wheel Brigade. She decided to volunteer for Girls Who Code because she enjoys mentoring and believes in increasing diversity in the tech field.
           </p>
-  			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
 
   			<div class="col-sm-6 col-lg-3">
-  			  <img class="img-rounded" src="img/volunteers/jenb.jpg" width="140" height="140">
-  			  <h2>Jennifer Bunge</h2>
-  			  <p>
+          <div class="text-center">
+    			  <img class="img-rounded" src="img/volunteers/jenb.jpg" width="140" height="140">
+    			  <h2>Jennifer Bunge</h2>
+          </div>
+  			  <p class="bio">
             I got into programming because of an introductory class in college. I had not done anything like programming before. Thought it was fun so I got my degree in CS. I have been working in IT since graduating in 2014.
 
             I got involved with GWC because I felt that if I had had more info before going to college I would have been better off. I feel that it is important to help educate young ladies of the possibilities that are out there.
@@ -106,66 +106,96 @@
         <div class="clearfix visible-sm-block"></div>
 
   			<div class="col-sm-6 col-lg-3">
-  			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="140" height="140">
-  			  <h2>Jen Homann</h2>
-  			  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-  			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <div class="text-center">
+    			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="140" height="140">
+    			  <h2>Jen Homann</h2>
+          </div>
+  			  <p class="bio">
+            Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+          </p>
   			</div>
 
   			<div class="col-sm-6 col-lg-3">
-  			  <img class="img-rounded" src="img/volunteers/katel.jpg" width="140" height="140">
-  			  <h2>Kate Larsen</h2>
-  			  <p>
+          <div class="text-center">
+    			  <img class="img-rounded" src="img/volunteers/katel.jpg" width="140" height="140">
+    			  <h2>Kate Larsen</h2>
+          </div>
+  			  <p class="bio">
             Getting my first laptop sparked my interest with technology. I have always been fascinated with how computers work and how much there still is to learn. On top of that, my mom worked in IT for a few years and I attended the Take Your Kids to Work Days. I loved the atmosphere and she's always been my role model. I'm thankful for my parent's support when deciding to major in Management Information Systems.
 
             I got involved with Girls Who Code because I love the idea of young girls getting the opportunity to code. I hope that this organization helps someone decide that they want to go into a technology-related field. I'm proud to be a part of such a great organization!
           </p>
-  			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
       </div>
 
-			<div class="row" align="center">
+      <div class="row">
+        <div class="col-sm-6 col-lg-3">
+          <div class="text-center">
+            <img class="img-rounded" src="img/volunteers/biancaz.jpg" width="140" height="140">
+            <h2>Bianca Zongrone</h2>
+          </div>
+          <p class="bio">
+            I'm a UX Designer at Kiewit (yay! New job!)
+            I've always been surrounded by tech, but was never really encouraged to go into it. I went to grad school for human resources and industrial/organizational psychology, but it didn't allow me to be creative and I didn't feel fulfilled. I found Interface and learned front-end web development, which allowed me to move into a UX design position, and here I am!
+            I love Girls Who Code because I'm so excited that these ladies get an opportunity that wasn't available to me at their age. Because they're encouraged to code, they'll be awesome problem solvers and collaborators. I'm excited to be part of a group that lets girls know that they can be anything they want to be.
+          </p>
+        </div>
+      </div>
+
+			<div class="row">
         <h1>Co-Organizers</h1>
 
   			<div class="col-md-4">
-  			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-  			  <h2>Naomi See</h2>
-  			  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <div class="text-center">
+    			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+    			  <h2>Naomi See</h2>
+          </div>
+  			  <p class="bio">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
   			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
   			<div class="col-md-4">
-  			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-  			  <h2>Marvel Maring</h2>
-  			  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <div class="text-center">
+    			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+    			  <h2>Marvel Maring</h2>
+          </div>
+  			  <p class="bio">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
   			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
   			<div class="col-md-4">
-  			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-  			  <h2>Eris Koleszar</h2>
-  			  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <div class="text-center">
+    			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+    			  <h2>Eris Koleszar</h2>
+          </div>
+  			  <p class="bio">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
   			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
 			</div>
 
-			<div class="row" align="center">
+			<div class="row">
   			<div class="col-md-4">
-  			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-  			  <h2>Sandi Barr</h2>
-  			  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <div class="text-center">
+    			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+    			  <h2>Sandi Barr</h2>
+          </div>
+  			  <p class="bio">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
   			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
 
   			<div class="col-md-4">
-  			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-  			  <h2>Shonna Dorsey</h2>
-  			  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <div class="text-center">
+    			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+    			  <h2>Shonna Dorsey</h2>
+          </div>
+  			  <p class="bio">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
   			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
 
   			<div class="col-md-4">
-  			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-  			  <h2>Wendy Holley</h2>
-  			  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <div class="text-center">
+    			  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+    			  <h2>Wendy Holley</h2>
+          </div>
+  			  <p class="bio">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
   			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
 		  </div>
