--- a/volunteers.html
+++ b/volunteers.html
@@ -64,14 +64,18 @@
         <h1>Instructors</h1>
 
 				<div class="col-sm-6">
-					<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-				  <h2>Eris Koleszar</h2>
+          <div class="text-center">
+  					<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+  				  <h2>Eris Koleszar</h2>
+          </div>
 				  <p class="bio">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 				</div>
 
 				<div class="col-sm-6">
-				  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-				  <h2>Wendy Holley</h2>
+          <div class="text-center">
+  				  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+  				  <h2>Wendy Holley</h2>
+          </div>
 				  <p class="bio">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 				</div>
 			</div>
@@ -100,7 +104,6 @@
 
             I got involved with GWC because I felt that if I had had more info before going to college I would have been better off. I feel that it is important to help educate young ladies of the possibilities that are out there.
           </p>
-  			  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
   			</div>
 
         <div class="clearfix visible-sm-block"></div>
