volunteer have badges, bios expand and collapse, moved to Open Sans fonts per style guide

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 		<!--custom stylesheet-->
-		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,800" rel="stylesheet" type
     ="text/css">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -66,7 +66,7 @@
           <div class="about-post">
 
             <hr>
-            <img class="wrap-left" src="img/girls/gwc-4.jpg" />		<p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+            <img class="wrap-left" src="img/girls/gwc-4.jpg" />		<p>Cum sociis natoque penatibus et magnis <a class="inline-link" href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
 
             <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
             <h2>Heading</h2>
