--- a/sponsors.html
+++ b/sponsors.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 		<!--custom stylesheet-->
-		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,800" rel="stylesheet" type
     ="text/css">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -62,7 +62,8 @@
 
 		  <!-- Three columns of text below the carousel -->
 		  <div class="row">
-				<p>Thank you to our wonderful sponsors for supporting Omaha Girls Who Code</p>
+				<h1>Sponsors -- we couldn't do it without you!</h1>
+        <hr>
 				<div class="col-md-3">
 
 					<img class="img-circle" src="img/sponsors/dynamo.png" alt="Dynamo" width="140" height="140">
