--- a/volunteers.html
+++ b/volunteers.html
@@ -174,14 +174,14 @@
 
         <div class="col-sm-6 col-lg-3">
           <div class="text-center">
-            <img class="img-rounded bio-pic" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
+            <img class="img-rounded bio-pic" src="img/volunteers/alexandram.jpg">
             <h3>Alexandra Millatmal</h3>
           </div>
           <input type="checkbox" class="clamp-toggle" id="clamp-toggle-alexandra"/>
           <p class="bio ellipsis-container clamped">
             <span class="badges badge-ta"></span>
             <label class="ellipsis" for="clamp-toggle-alexandra">
-              Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+              I began coding because I wanted to engineer solutions to real-world problems. After working in journalism (I produced an international talk show and edited the first English-language news site in Tunisia), I decided to transition to a career in development by enrolling in Omaha Code School. Now, I'm an instructor there! I use code as a tool to make processes more efficient and approach problems and their solutions in a relevant, accessible way. I am passionate about Girls Who Code because - given the challenges we face - who else is better-equipped to contribute fresh ideas and think up the next best solutions than girls and women?
             </label>
           </p>
         </div>
@@ -343,12 +343,12 @@
         <div class="col-sm-6 col-lg-3">
           <div class="text-center">
             <img class="img-rounded bio-pic" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-            <h3>Kristeen Shabram</h3>
+            <h3>Kat Slump</h3>
           </div>
-          <input type="checkbox" class="clamp-toggle" id="clamp-toggle-kristeen"/>
+          <input type="checkbox" class="clamp-toggle" id="clamp-toggle-kat"/>
           <p class="bio ellipsis-container clamped">
-            <span class="badges badge-ta"></span>
-            <label class="ellipsis" for="clamp-toggle-kristeen">
+            <span class="badges badge-speaker"></span>
+            <label class="ellipsis" for="clamp-toggle-kat">
               Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
             </label>
           </p>
@@ -386,19 +386,6 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-6 col-lg-3">
-          <div class="text-center">
-            <img class="img-rounded bio-pic" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-            <h3>Kat Slump</h3>
-          </div>
-          <input type="checkbox" class="clamp-toggle" id="clamp-toggle-kat"/>
-          <p class="bio ellipsis-container clamped">
-            <span class="badges badge-speaker"></span>
-            <label class="ellipsis" for="clamp-toggle-kat">
-              Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
-            </label>
-          </p>
-        </div>
 
         <div class="col-sm-6 col-lg-3">
           <div class="text-center">
@@ -414,8 +401,6 @@
           </p>
         </div>
 
-        <div class="clearfix visible-sm-block"></div>
-
         <div class="col-sm-6 col-lg-3">
           <div class="text-center">
             <img class="img-rounded bio-pic" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
@@ -429,6 +414,8 @@
             </label>
           </p>
         </div>
+
+        <div class="clearfix visible-sm-block"></div>
 
         <div class="col-sm-6 col-lg-3">
           <!-- anyone else ? -->
