--- a/sponsors.html
+++ b/sponsors.html
@@ -62,7 +62,30 @@
 
 		  <!-- Three columns of text below the carousel -->
 		  <div class="row">
-				<p>Thank you to our wonderful sponsors for supporting Omaha Girls Who Code</p>
+		  		<br />
+		  		<br />
+				<p>Thank you to our wonderful sponsors for supporting Omaha Girls Who Code. 
+				<br />
+				Interested in donating resources to a club? Click <a href="#" data-toggle="modal" data-target="#sponsorModal">here</a>
+
+					<div class="modal fade sponsorModal" tabindex="-1" role="dialog" aria-labelledby="sponsorModal" aria-hidden="true" id="bannerformmodal">
+						<div class="modal-dialog modal-sm">
+        						<div class="modal-content">
+          						<div class="modal-header">
+	                					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	                					<h4 class="modal-title">Sponsor Interest Form</h4>
+                					</div>
+                					<div class="modal-body">
+                     
+                  					</div>
+              						<div class="modal-footer">
+                						<button type="button" class="btn btn-blue">Submit</button>
+              						</div>          
+        						</div>
+        						</div>
+      						</div>
+    					</div>
+				to complete a short form and our fundraising coordinator will contact you for more details.</p>
 				<div class="col-md-3">
 
 					<img class="img-circle" src="img/sponsors/dynamo.png" alt="Dynamo" width="140" height="140">
@@ -72,23 +95,23 @@
 				</div>
 
 				<div class="col-md-3">
-				  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				  <img class="img-circle" src="img/sponsors/library.jpeg" alt="Omaha Public Library" width="140" height="140">
 				  <h2>Heading</h2>
-				  <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-				  <p><a class="btn btn-default" href="#" role="button">Visit Website` &raquo;</a></p>
+				  <p>Omaha Public Library provides access to reading materials, computers and other resources for free to people in our community through in person and virtual library options. Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program</p>
+				  <p><a class="btn btn-default" href="http://omahalibrary.org" role="button">Visit Website` &raquo;</a></p>
 				</div>
 
 				<div class="col-md-3">
-				  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				  <img class="img-circle" src="img/sponsors/interface.png" alt="Interface Web School" width="140" height="140">
 				  <h2>Heading</h2>
-				  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-				  <p><a class="btn btn-default" href="#" role="button">Visit Website &raquo;</a></p>
+				  <p>Interface Web School is a web developer training school based in Omaha Nebraska. Members of the Interface Web School leadership team donated space and forms access for participant application management.</p>
+				  <p><a class="btn btn-default" href="http://interfaceschool.com" role="button">Visit Website &raquo;</a></p>
 				</div>
 
 				<div class="col-md-3">
-				  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				  <img class="img-circle" src="img/sponsors/flywheel.jpg" alt="Generic placeholder image" width="140" height="140">
 				  <h2>Heading</h2>
-				  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+				  <p>Flywheel is a WordPress hosting company based in Omaha Nebraska. The Flywheel team provided Scout Books for girls.</p>
 				  <p><a class="btn btn-default" href="#" role="button">Visit Website &raquo;</a></p>
 				</div>
 		  </div><!-- /.row -->
