--- a/sponsors.html
+++ b/sponsors.html
@@ -58,84 +58,88 @@
       </div>
     </div>
 
-		<div class="container team">
+		<div class="container sponsor">
 
-		  <!-- Three columns of text below the carousel -->
+		  <!-- Sponsor info and popup sponsor interest form -->
 		  <div class="row">
-		  		<br />
-		  		<br />
+			<div class="col-md-1"></div>
+		  	<div class="col-md-10">
 				<p>Thank you to our wonderful sponsors for supporting Omaha Girls Who Code. 
-				<br />
-				Interested in donating resources to a club? Click <a href="#" data-toggle="modal" data-target="#sponsorModal">here</a>
+				Interested in donating resources to a club? Click the button below to submit a sponsor interest form.</p>
+				<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#sponsorModal">Sponsorship Interest Form</button>
 
-					<div class="modal fade sponsorModal" tabindex="-1" role="dialog" aria-labelledby="sponsorModal" aria-hidden="true" id="bannerformmodal">
-						<div class="modal-dialog modal-sm">
-        						<div class="modal-content">
-          						<div class="modal-header">
-	                					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	                					<h4 class="modal-title">Sponsor Interest Form</h4>
-                					</div>
-                					<div class="modal-body">
-                     						<div id="wufoo-mobbd7d0s4mjkm">
-									Fill out my <a href="https://interfaceschool.wufoo.com/forms/mobbd7d0s4mjkm">online form</a>.
+					<!-- Modal -->
+					<div id="sponsorModal" class="modal fade" role="dialog">
+					  <div class="modal-dialog">
+
+						<!-- Modal content-->
+						<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal">&times;</button>
+									<h4 class="modal-title">Sponsor Interest Form</h4>
 								</div>
-									<script type="text/javascript">var mobbd7d0s4mjkm;(function(d, t) {
-									var s = d.createElement(t), options = {
-									'userName':'interfaceschool',
-									'formHash':'mobbd7d0s4mjkm',
-									'autoResize':true,
-									'height':'832',
-									'async':true,
-									'host':'wufoo.com',
-									'header':'show',
-									'ssl':true};
-									s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-									s.onload = s.onreadystatechange = function() {
-									var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-									try { mobbd7d0s4mjkm = new WufooForm();mobbd7d0s4mjkm.initialize(options);mobbd7d0s4mjkm.display(); } catch (e) {}};
-									var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-									})(document, 'script');
-								</script>
-								</div>
-              						<div class="modal-footer">
-                						<button type="button" class="btn btn-blue">Submit</button>
-              						</div>          
-        						</div>
-        						</div>
-      						</div>
-    					</div>
-				to complete a short form and our fundraising coordinator will contact you for more details.</p>
+								<div class="modal-body">
+									<div id="wufoo-mobbd7d0s4mjkm">
+										Fill out my <a href="https://interfaceschool.wufoo.com/forms/mobbd7d0s4mjkm">online form</a>.
+									</div>
+										<script type="text/javascript">
+											var mobbd7d0s4mjkm;(function(d, t) {
+											var s = d.createElement(t), options = {
+											'userName':'interfaceschool',
+											'formHash':'mobbd7d0s4mjkm',
+											'autoResize':true,
+											'height':'832',
+											'async':true,
+											'host':'wufoo.com',
+											'header':'show',
+											'ssl':true};
+											s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+											s.onload = s.onreadystatechange = function() {
+											var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+											try { mobbd7d0s4mjkm = new WufooForm();mobbd7d0s4mjkm.initialize(options);mobbd7d0s4mjkm.display(); } catch (e) {}};
+											var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+											})(document, 'script');
+										</script>
+									</div>
+              					</div>
+        					</div>
+      					</div>
+					</div>
+				<div class="col-md-1"></div>
+				</div>
+				<!-- Sponsor logos and info, 4 column grid -->
+				<div class="row">
 				<div class="col-md-3">
 
 					<img class="img-circle" src="img/sponsors/dynamo.png" alt="Dynamo" width="140" height="140">
 				  <h2>Dynamo</h2>
 				  <p>Dynamo is an Omaha based software consulting firm. Dynamo provides weekly snack delivery and final event sponsorship for Omaha Girls Who Code</p>
-				  <p><a class="btn btn-default" href="http://godynamo.com" role="button" target="_blank">Visit Website &raquo;</a></p>
+				  <p><a class="btn btn-default" href="http://godynamo.com" target="_blank" role="button">Visit Website &raquo;</a></p>
 				</div>
 
 				<div class="col-md-3">
 				  <img class="img-circle" src="img/sponsors/library.jpeg" alt="Omaha Public Library" width="140" height="140">
 				  <h2>Heading</h2>
-				  <p>Omaha Public Library provides access to reading materials, computers and other resources for free to people in our community through in person and virtual library options. Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program</p>
-				  <p><a class="btn btn-default" href="http://omahalibrary.org" role="button">Visit Website` &raquo;</a></p>
+				  <p>Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program</p>
+				  <p><a class="btn btn-default" href="http://omahalibrary.org" target="_blank" role="button">Visit Website` &raquo;</a></p>
 				</div>
 
 				<div class="col-md-3">
-				  <img class="img-circle" src="img/sponsors/interface.png" alt="Interface Web School" width="140" height="140">
+				  <img src="img/sponsors/interface.png" alt="Interface Web School" width="140" height="140">
 				  <h2>Heading</h2>
 				  <p>Interface Web School is a web developer training school based in Omaha Nebraska. Members of the Interface Web School leadership team donated space and forms access for participant application management.</p>
-				  <p><a class="btn btn-default" href="http://interfaceschool.com" role="button">Visit Website &raquo;</a></p>
+				  <p><a class="btn btn-default" href="http://interfaceschool.com" target="_blank" role="button">Visit Website &raquo;</a></p>
 				</div>
 
 				<div class="col-md-3">
-				  <img class="img-circle" src="img/sponsors/flywheel.jpg" alt="Generic placeholder image" width="140" height="140">
+				  <img class="img-circle" src="img/sponsors/flywheel.png" alt="Flywheel" width="140" height="140">
 				  <h2>Heading</h2>
 				  <p>Flywheel is a WordPress hosting company based in Omaha Nebraska. The Flywheel team provided Scout Books for girls.</p>
-				  <p><a class="btn btn-default" href="#" role="button">Visit Website &raquo;</a></p>
+				  <p><a class="btn btn-default" href="http://getflywheel.com" target="_blank" role="button">Visit Website &raquo;</a></p>
 				</div>
 		  </div><!-- /.row -->
+		  
 		</div><!-- /.container -->
-
 		<!-- FOOTER -->
 	  <footer class="footer">
 	    <div class="container">
