Remove repeated img dimensions
Removed repeated image dimensions on logo files.

--- a/sponsors.html
+++ b/sponsors.html
@@ -15,6 +15,7 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 		<script src="https://use.fontawesome.com/4689f9ac4c.js"></script>
+		<script src="js/read-more.js"></script>
 
 	</head>
 
@@ -111,28 +112,32 @@
 				<div class="row">
 				<div class="col-md-3">
 
-					<img class="img-circle" src="img/sponsors/dynamo.png" alt="Dynamo" width="140" height="140">
+					<img class="img-circle" src="img/sponsors/dynamo.png" alt="Dynamo">
 				  <h2>Dynamo</h2>
 				  <p>Dynamo is an Omaha based software consulting firm. Dynamo provides weekly snack delivery and final event sponsorship for Omaha Girls Who Code</p>
 				  <p><a class="btn btn-default" href="http://godynamo.com" target="_blank" role="button">Visit Website &raquo;</a></p>
 				</div>
 
 				<div class="col-md-3">
-				  <img class="img-circle" src="img/sponsors/library.jpeg" alt="Omaha Public Library" width="140" height="140">
+				  <img class="img-circle" src="img/sponsors/library.jpeg" alt="Omaha Public Library">
 				  <h2>Heading</h2>
-				  <p>Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program</p>
+				  <div class="comment more">
+				  	<p>Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program</p>
+				  </div>
 				  <p><a class="btn btn-default" href="http://omahalibrary.org" target="_blank" role="button">Visit Website` &raquo;</a></p>
 				</div>
 
 				<div class="col-md-3">
-				  <img src="img/sponsors/interface.png" alt="Interface Web School" width="140" height="140">
+				  <img src="img/sponsors/interface.png" alt="Interface Web School">
 				  <h2>Heading</h2>
-				  <p>Interface Web School is a web developer training school based in Omaha Nebraska. Members of the Interface Web School leadership team donated space and forms access for participant application management.</p>
+				  <div class="comment more">
+				  	<p>Interface Web School is a web developer training school based in Omaha Nebraska. Members of the Interface Web School leadership team donated space and forms access for participant application management.</p>
+				  </div>
 				  <p><a class="btn btn-default" href="http://interfaceschool.com" target="_blank" role="button">Visit Website &raquo;</a></p>
 				</div>
 
 				<div class="col-md-3">
-				  <img class="img-circle" src="img/sponsors/flywheel.png" alt="Flywheel" width="140" height="140">
+				  <img class="img-circle" src="img/sponsors/flywheel.png" alt="Flywheel">
 				  <h2>Heading</h2>
 				  <p>Flywheel is a WordPress hosting company based in Omaha Nebraska. The Flywheel team provided Scout Books for girls.</p>
 				  <p><a class="btn btn-default" href="http://getflywheel.com" target="_blank" role="button">Visit Website &raquo;</a></p>
