Update H2 text for logos to company names

--- a/sponsors.html
+++ b/sponsors.html
@@ -120,7 +120,7 @@
 
 				<div class="col-md-3">
 				  <img class="img-circle" src="img/sponsors/library.jpeg" alt="Omaha Public Library">
-				  <h2>Heading</h2>
+				  <h2>Omaha Public Library</h2>
 				  <div class="comment more">
 				  	<p>Omaha Public Library Milton R. Abrahams Branch is the sponsoring location of the first Omaha Girls Who Code Club. The library also generously provides laptops for girls to use for the duration of the program</p>
 				  </div>
@@ -129,7 +129,7 @@
 
 				<div class="col-md-3">
 				  <img src="img/sponsors/interface.png" alt="Interface Web School">
-				  <h2>Heading</h2>
+				  <h2>Interface Web School</h2>
 				  <div class="comment more">
 				  	<p>Interface Web School is a web developer training school based in Omaha Nebraska. Members of the Interface Web School leadership team donated space and forms access for participant application management.</p>
 				  </div>
@@ -138,7 +138,7 @@
 
 				<div class="col-md-3">
 				  <img class="img-circle" src="img/sponsors/flywheel.png" alt="Flywheel">
-				  <h2>Heading</h2>
+				  <h2>Flywheel</h2>
 				  <p>Flywheel is a WordPress hosting company based in Omaha Nebraska. The Flywheel team provided Scout Books for girls.</p>
 				  <p><a class="btn btn-default" href="http://getflywheel.com" target="_blank" role="button">Visit Website &raquo;</a></p>
 				</div>
