paragraph link styling

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
           <div class="about-post">
 
             <hr>
-            <img class="wrap-left" src="img/girls/gwc-4.jpg" />		<p>Cum sociis natoque penatibus et magnis <a class="inline-link" href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+            <img class="wrap-left" src="img/girls/gwc-4.jpg" />		<p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
 
             <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
             <h2>Heading</h2>
