--- a/volunteers.html
+++ b/volunteers.html
@@ -125,7 +125,8 @@
             <p class="bio ellipsis-container clamped">
               <span class="badges badge-organizer badge-ta"></span>
               <label class="ellipsis" for="clamp-toggle-sandi">
-                Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+                I've long wanted to start a Girls Who Code Club in Omaha but knew I couldn't do it on my own, so when Shonna introduced me to Marvel and Lana, I felt we could build a great team with the Omaha Public Library, Interface School, and Omaha Coding Women. I had a feeling that some of the Omaha Coding Women members felt the same and figured that we'd get a few volunteers. When Omaha Coding Women got involved, they showed up in droves. I'm so proud of everyone's hard work and continuing efforts to bring this opportunity to more and more young women in Omaha, and I'm honored to be a part of it.
+                Not many of us had an opportunity to get this much exposure to technology in our younger years. Even more so, not many of us had peers to experience it with. One of the reasons I started Omaha Coding Women was because I knew very few female programmers, and I thought surely there must be more out there like me that are in need of a place to connect. The chance for these young ladies to learn and grow in a group of their peers is building such a strong foundation of support, encouragement, and teamwork. A strong team is 10x more valuable than a 10x engineer.
               </label>
             </p>
           </div>
