--- a/calendar.html
+++ b/calendar.html
@@ -35,22 +35,17 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="about.html">About</a></li>
-                <li class="active"><a href="calendar.html">Calendar</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">The Team<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="volunteers.html">Volunteers</a></li>
-                    <li><a href="sponsors.html">Sponsors</a></li>
-                  </ul>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Club Info<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Abrahams Branch</a></li>
-                    <li><a href="#">Do Space and OPS</a></li>
-                  </ul>
+								<li><a href="about.html">About</a></li>
+								<li><a href="calendar.html">Calendar</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li class="dropdown">
+								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">The Team<span class="caret"></span></a>
+								  <ul class="dropdown-menu">
+										<li><a href="volunteers.html">Volunteers</a></li>
+										<li><a href="sponsors.html">Sponsors</a></li>
+									</ul>
                 </li>
+								<li><a href="clubs.html">Clubs</a></li>
               </ul>
             </div>
           </div>
