--- a/index.html
+++ b/index.html
@@ -58,13 +58,8 @@
 										<li><a href="volunteers.html">Volunteers</a></li>
 										<li><a href="sponsors.html">Sponsors</a></li>
 									</ul>
-								<li class="dropdown">
-								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Club Info<span class="caret"></span></a>
-								  <ul class="dropdown-menu">
-										<li><a href="#">Abrahams Branch</a></li>
-										<li><a href="#">Do Space and OPS</a></li>
-								  </ul>
-								</li>
+                </li>
+								<li><a href="clubs.html">Clubs</a></li>
 						  </ul>
 						</div>
 				  </div>
