Some default styling for the faq

--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width" />
-		<title>Omaha Girls Who Code</title>
+		<title>FAQ | Omaha Girls Who Code</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -69,12 +69,12 @@
 	  <div class="container">
       
       <div class="row">
-        <h1 class="about-title">Frequently Asked Questions</h1>
+        <h1 class="faq-title">Frequently Asked Questions</h1>
         <div class="faq-post">
           <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#parents" aria-controls="parents" role="tab" data-toggle="tab">Parents</a></li>
-              <li role="presentation"><a href="#volunteers" aria-controls="volunteers" role="rstab" data-toggle="tab">Volunteers</a></li>
+              <li role="presentation" class="active"><a href="#parents" aria-controls="parents" role="tab" data-toggle="tab" class="faq-tab">Girls</a></li>
+              <li role="presentation"><a href="#volunteers" aria-controls="volunteers" role="rstab" data-toggle="tab" class="faq-tab">Volunteers</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -82,16 +82,14 @@
               <div role="tabpanel" class="tab-pane active" id="parents">
                 <hr>
                 
-                parents
-                <div class="row">
                   <div class="col-xs-12 col-md-3">
-                    <h3>Applying</h3>
+                    <h2 class="faq-group">Applying</h2>
                   </div>
                   <div class="col-xs-12 col-md-9">
                     <div id="accordion" role="tablist" aria-multiselectable="true">
                       <div>
                         <div role="tab" id="headingOne">
-                          <h4>
+                          <h4 class="faq-heading">
                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                               How old does my daughter have to be?
                             </a>
@@ -105,7 +103,7 @@
                       </div>
                       <div>
                         <div role="tab" id="headingTwo">
-                          <h4>
+                          <h4 class="faq-heading">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                               How much does it cost for my girl to participate?
                             </a>
@@ -119,7 +117,7 @@
                       </div>
                       <div>
                         <div role="tab" id="headingThree">
-                          <h4>
+                          <h4 class="faq-heading">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                               Does my girl need a laptop?
                             </a>
@@ -135,7 +133,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+
               </div>
               <div role="tabpanel" class="tab-pane" id="volunteers">
                 <hr>
