--- a/calendar.html
+++ b/calendar.html
@@ -35,7 +35,14 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-								<li><a href="about.html">About</a></li>
+								<li class="dropdown">
+								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+								  <ul class="dropdown-menu">
+										<li><a href="about.html">Omaha Girls Who Code</a></li>
+										<li><a href="faq.html">FAQ</a></li>
+										<li><a href="#.html">Resources</a></li>
+									</ul>
+                </li>
 								<li><a href="calendar.html">Calendar</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li class="dropdown">
