--- a/clubs.html
+++ b/clubs.html
@@ -26,14 +26,6 @@
 
 
 	<body>
-		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));</script>
     <div class="navbar-wrapper">
 		  <div class="container">
 				<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -73,8 +65,51 @@
 				</nav>
 		  </div>
 		</div>
-
-
+    <div class="container clubs">
+      <h1>Omaha Clubs</h1>
+      <hr>
+      <div id="map" style="width:100%; height: 300px;"></div>
+      <script>
+      function initMap() {
+        var centerLatLng = {lat: 41.2589604, lng: -96.0268497}
+        var clubs = [
+          {
+          club: 'Omaha Public Library',
+          lat:   41.3044577,
+          lng:  -96.0539399, 
+        },
+        {
+          club: 'AIM',
+          lat:   41.2647173,
+          lng:  -95.9457751, 
+        },
+        {
+          club: 'Do Space',
+          lat:   41.2589604,
+          lng:  -96.0268497, 
+        }
+        ]
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: centerLatLng,
+          scrollwheel: false,
+          zoom: 11
+        });
+        
+        for (var i = 0; i < clubs.length; i ++ ) {
+          var club = clubs[i];
+          // Create a marker and set its position.
+          var marker = new google.maps.Marker({
+            map: map,
+            position: {lat: club.lat, lng: club.lng},
+            title: club.club
+          });          
+        }
+      }
+      </script>
+      <div class="row">
+      </div>
+    </div>
 		<!-- FOOTER -->
 	  <footer class="footer">
 	    <div class="container">
@@ -100,6 +135,7 @@
 	      </div>
 	    </div>
 	  </footer>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfduN7Xyv7b2tFVzw7_gfrkRnEPi30Lk8&callback=initMap"
+    async defer></script>
 	</body>
 </html>
