Adds basic table to clubs page

--- a/clubs.html
+++ b/clubs.html
@@ -104,6 +104,51 @@
       }
       </script>
       <div class="row">
+        <div class="table-responsive">
+          <table class="table ">
+            <thead>
+              <th></th>
+              <th>Club</th>
+              <th>Location</th>
+              <th>Meeting Days</th>
+              <th>Session Starts</th>
+              <th>Application Due</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <img src="img/clubs/library.jpeg">
+                </td>
+                <td>Omaha Public Library</td>
+                <td>Abrahams Branch</td>
+                <td>Saturdays, 9:00am-1:00pm</td>
+                <td>Saturday, September 17</td>
+                <td>Saturday, August 27</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="img/clubs/AIM-logo.png">
+                </td>
+                <td>AIM</td>
+                <td>Completely  Kids</td>
+                <td>Tuesdays, Wednesdays 4-6pm</td>
+                <td>N/A</td>
+                <td>N/A</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="img/clubs/dospace-logo.jpg">
+                </td>
+                <td>Do Space</td>
+                <td>7205 Dodge St</td>
+                <td>Saturdays, Sundays 3-5pm</td>
+                <td>N/A</td>
+                <td>N/A</td>
+              </tr>
+              
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
 		<!-- FOOTER -->
