--- a/faq.html
+++ b/faq.html
@@ -50,6 +50,7 @@
 									</ul>
                 </li>
 								<li><a href="calendar.html">Calendar</a></li>
+								<li><a href="contact.html">Contact</a></li>
 								<li class="dropdown">
 								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">The Team<span class="caret"></span></a>
 								  <ul class="dropdown-menu">
